<resources>
    <string name="app_name">音乐播放器</string>
    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="search">搜索</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="next">下一首</string>
    <string name="previous">上一首</string>
    <string name="no_music_selected">未选择音乐</string>
    <string name="lyrics">歌词</string>
    <string name="playlist">播放列表</string>
    <string name="search_music_hint">搜索歌曲、歌手...</string>
    <string name="permission_required">需要权限才能访问本地音乐</string>
    <string name="grant_permission">授予权限</string>
</resources>
